[gd_scene load_steps=7 format=3 uid="uid://b3wlmruj3bhmg"]

[ext_resource type="Script" path="res://Code/Character/Cheese.gd" id="1_crxs2"]
[ext_resource type="Texture2D" uid="uid://c0h1wd0mrhpp8" path="res://art/Character/Enemies/Cheese/wheel.png" id="3_87lp3"]
[ext_resource type="Texture2D" uid="uid://fsp1pyrspo3v" path="res://art/Character/Enemies/Cheese/wheel_textured.png" id="5_povic"]
[ext_resource type="AudioStream" uid="uid://b0wlotfuxxg14" path="res://Audio/splat.mp3" id="5_xjs2y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pd45i"]
radius = 120.046

[sub_resource type="CircleShape2D" id="CircleShape2D_djehj"]
radius = 120.0

[node name="Cheese" type="CharacterBody2D"]
scale = Vector2(0.3, 0.3)
collision_layer = 2
collision_mask = 4
script = ExtResource("1_crxs2")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pd45i")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="Hurtbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3.05176e-05, -3.67165e-05)
shape = SubResource("CircleShape2D_djehj")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xjs2y")
volume_db = 6.0

[node name="Sprite" type="CanvasGroup" parent="."]
scale = Vector2(0.8, 1)

[node name="Back" type="Sprite2D" parent="Sprite"]
z_index = -1
position = Vector2(-29.1667, 0)
texture = ExtResource("3_87lp3")
offset = Vector2(-13.3333, 0)

[node name="L_Anchor" type="Node2D" parent="Sprite/Back"]
position = Vector2(-66.743, -161.923)

[node name="R_Anchor" type="Node2D" parent="Sprite/Back"]
position = Vector2(67.5, -160)

[node name="Center" type="Node2D" parent="Sprite/Back"]
position = Vector2(0, 8.103)

[node name="L_Inner" type="Node2D" parent="Sprite/Back"]
position = Vector2(-68.863, -155.893)

[node name="R_Inner" type="Node2D" parent="Sprite/Back"]
position = Vector2(67.67, -154.12)

[node name="Front" type="Sprite2D" parent="Sprite"]
position = Vector2(30, 0)
texture = ExtResource("5_povic")
offset = Vector2(-13.3333, 0)

[node name="L_Anchor" type="Node2D" parent="Sprite/Front"]
position = Vector2(-67.403, -161.923)

[node name="R_Anchor" type="Node2D" parent="Sprite/Front"]
position = Vector2(67.5, -160)

[node name="Center" type="Node2D" parent="Sprite/Front"]
position = Vector2(-0.833, 8.103)

[node name="L_Inner" type="Node2D" parent="Sprite/Front"]
position = Vector2(-68.863, -155.893)

[node name="R_Inner" type="Node2D" parent="Sprite/Front"]
position = Vector2(67.67, -154.12)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
